aws/kubernetes/api-gateway-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: mall
spec:
  template:
    spec:
      containers:
        - name: api-gateway
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
