aws/kubernetes/kafka-resources.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
  namespace: mall
spec:
  template:
    spec:
      containers:
        - name: kafka
          resources:
            requests:
              cpu: 200m
              memory: 768Mi
            limits:
              cpu: "1"
              memory: 1280Mi
