aws/kubernetes/product-service-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  namespace: mall
spec:
  template:
    spec:
      containers:
        - name: product-service
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 750m
              memory: 512Mi
